// ------------------------------------------------------------------------------------------------------------------------------
//
// Machine generated by root/generators/Protobuf.Messages.pl.  Do not edit directly.  Edit the corresponding root/definitions/Mbus.def
//
// Copyright 2014, SpiderRock Technology
//
// ------------------------------------------------------------------------------------------------------------------------------

syntax = "proto3";

package spiderrock.protobuf;
option csharp_namespace = "SRProtobufCore";


import "spiderrock_common.proto";

    
message MLinkLogon {


    MbusInfo _meta = 1;
    
    string api_key = 100; // SR generated API key
    string api_password = 103; // client supplied secret (optional; required if supplied previously)
    string jwt_token = 106; // Cognito JWT token
}


