// ------------------------------------------------------------------------------------------------------------------------------
//
// Machine generated by root/generators/Protobuf.Messages.pl.  Do not edit directly.  Edit the corresponding root/definitions/Mbus.def
//
// Copyright 2014, SpiderRock Technology
//
// ------------------------------------------------------------------------------------------------------------------------------

syntax = "proto3";

package spiderrock.protobuf;
option csharp_namespace = "SRProtobufCore";


import "spiderrock_common.proto";

    
message MLinkQuery {
    message EKeyFilters {
        
        ExpiryKey expiry_key = 142;
    }

    message MsgType {
        
        uint32 msg_type = 154;
        int64 schema_hash = 157; // (optional) message schema hash [if supplied and matches server schema hash for this message binary encoding will be used]
        uint32 local_msg_type = 160; // (optional) if != 0 the msgType number will be translated from msgType to localMsgType in the mlink server (binary messages)
        string local_msg_name = 163; // (optional) if exists the message name will be translated from msgName to localMsgName in the mlink server (json and protobuf messages)
        string view = 166; // (optional) list (subset) of field names to return with this message (eg. bidprice,askprice,bidsize,asksize) (default is all names)
        string where = 169; // (optional) where clause for this message type; eg. "(bidexch.eq.AMEX | bidexch.eq.CBOE) & bidsize.ge.100"  (default is all records)
    }

    message OKeyFilters {
        
        OptionKey option_key = 148;
    }

    message TKeyFilters {
        
        TickerKey ticker_key = 136;
    }


    MbusInfo _meta = 1;
    
    string query_label = 100; // (optional) query label
    MLinkQueryType query_type = 103;
    int32 active_latency = 106; // (optional) number of milliseconds between active query refreshes (0 = no delay, -1 = wait for SignalReady) [default = -1]
    SysEnvironment sys_environment = 109; // (optional) records cannot have [sysEnvironment + sysRealm] in their route history (no loops)
    SysRealm sys_realm = 112;
    int64 highwater_ts = 115; // (optional) records must have a header.sentTs that is later than this value (nanoseconds after the UNIX epoch)
    string stripe_filter = 118; // (optional) if supplied records must be within the specified stripe
    string msg_name_filter = 121; // (optional) if supplied records must have a message name from this set [comma separated]
    string accnt_filter = 124; // (optional) if supplied records must have an x-ray accnt from this set [comma separated]
    string client_firm_filter = 127; // (optional) if supplied records must have an x-ray client firm from this set [comma separated]
    string user_name_filter = 130; // (optional) if supplied records must have an x-ray user name from this set [comma separated]
    repeated EKeyFilters ekey_filters = 139;
    repeated MsgType msg_type = 151;
    repeated OKeyFilters okey_filters = 145;
    repeated TKeyFilters tkey_filters = 133;
}


