syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message MLinkResponse {


    MessageMetadata _meta = 1;
    
    int64 query_send_ts = 100; // MLinkQuery.header.sentTs (should be unique)
    string query_label = 103; // from MLinkQuery.queryLabel
    MLinkState state = 106;
    string detail = 109;
    int64 highwater_ts = 112; // from MLinkQuery.hdrSendTs (if Begin); otherwise max .hdrSendTs sent so far
    int64 num_bytes_sent = 115; // cumulative bytes sent
    int64 num_messages_sent = 118; // cumulative messages sent
    google.protobuf.Timestamp timestamp = 121;
}


